﻿Rev. 153 (26-Mar-2018)
• Code cleanup at PremiumSpawnerMainGump.
• README.md unified with READ-ME FIRST.txt and added usage and troubleshooting instructions.

Rev. 152 (19-Jun-2017)
• Updated CEO's Yet Another Arya Addon Generator to v3.0 (Hammerhand's update) for High Seas support.

Rev. 151 (18-Dec-2015)
• Renamed folder “Distro for RunUO 2.5” to just “Distro”.
• Updated READ-ME FIRST.txt changing folder name.

Rev. 150 (07-Dec-2015)
• Updated tutorials (Overseers' path).
• Updated SpawnsOverseer's commands to be more Linux friendly.

Rev. 149 (22-Jul-2015)
• Updated CEO's Yet Another Arya Addon Generator to v2.5 (Hammerhand's update).

Rev. 148 (29-Mar-2015)
• Moved from Google Code to GitHub.
• Added “README.md”, for use of GitHub only.

Rev. 147 (22-Jan-2015)
• Code cleanups (PremiumSpawner, PremiumSpawnerGump and SpawnEditor).
• Spawns overseer gatekeeper mode addition (work in progress).

Rev. 146 (16-Jan-2015)
• Restored support for RunUO 2.3 (unfortunately some people still use it).

Rev. 145 (14-Jan-2015)
• Champion Spawn Controller: changed Item ID to a mast for more visibility (it spawn close to Felucca Britain bank).
• Champion Spawns: added Ilshenar's Twisted Glade and Malas' Pestilence. Pending only Malas' Minotaur, not scripted by RunUO team yet.

Rev. 144 (13-Jan-2015)
• Fixed teleporters in Covetous dungeon level 3 (Lake Cave and Torture Chambers). Thanks to TestoTestov.

Rev. 143 (13-Jan-2015)
• Fixed no Solen Hive's entrances. Thanks to WesleySimmers.

Rev. 142 (10-Jan-2015)
• Updated ND.uuf uninstalation file.

Rev. 141 (10-Jan-2015)
• Champion Spawn bugfix. Kolio's fix. Not tested.

Rev. 140 (28-Sep-2014)
• Read-me instructions updated.

Rev. 139 (23-Feb-2014)
• Updated changelog, tutorials and “read-me” instructions.

Rev. 138 (22-Feb-2014)
• Forgot to update revision number and changelog.

Rev. 137 (22-Feb-2014)
• RunUO 2.3 and SVN is no longer supported;
• RunUO 2.4 renamed to RunUO 2.5;